--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <div ng-include="'template/header.tpl'"></div>
 <html>
 <head>
-	<title>Contact Manager</title>
+	<title>Contact Manager2</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/style.css">
